# FormacaoRust

./: Cargo.toml
Basics/calculator/src/: main.rs
Basics/fibonacci/src/: main.rs
Basics/guessing_game/src/: main.rs
Basics/prime_checker/src/: main.rs
Enums/formas_geometricas/src/: main.rs
Enums/livraria_3/src/: items.rs  library.rs  main.rs
Estruturas&Iteradores/achatar_deduplicar_filtrar/src/: main.rs
Estruturas&Iteradores/livraria_2/: Cargo.toml
Estruturas&Iteradores/livraria_2/src/: book.rs  main.rs
Estruturas&Iteradores/merceria_2/src/: item.rs  main.rs  supermarket.rs  supermarketerrors.rs
Estruturas&Iteradores/mutação_arrays_random/src/: main.rs
FinalProject/: Cargo.toml
FinalProject/src/: coords.rs  free_map.rs  main.rs  warehouse.rs
Nulabilidade_Erros/livraria_4/: Cargo.toml
Nulabilidade_Erros/livraria_4/src/: library4.rs  main.rs
Nulabilidade_Erros/mercearia_3/src/: main.rs
Ownership/array_mutation/src/: main.rs
Ownership/string_edit/src/: main.rs
Structs/livraria/src/: main.rs
Structs/mercearia/src/: main.rs
Traits_Genericos/merceria_4/src/: main.rs
Traits_Genericos/sorting_generico/src/: main.rs
Traits_Genericos/stack_generica/src/: main.rs  stack.rs
utils/src/: lib.rs
